--- a/main.css
+++ b/main.css
@@ -1,3 +1,18 @@
+    html {
+     scroll-behavior: smooth;
+    }
+    
+    .fade-in {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: opacity 1s ease-out, transform 1s ease-out;
+    }
+    .fade-in.show {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+
     body {
       font-family: 'Arial', sans-serif;
       margin: 0;
@@ -7,16 +22,48 @@
     }
 
     header {
-      background-color: #4a90e2;
+      background-image: url('img/backg.jpg');
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat; 
       color: white;
-      padding: 2rem;
+      min-height: 300px;
+      flex-direction: column;
+      justify-content: center;
       text-align: center;
+      padding-top: 80px;
     }
 
     .header-text {
       font-size: 2rem;
-      margin: 100;
+      margin: 100px;
+      text-shadow:
+        -1px -1px 0 black,
+        1px -1px 0 black,
+        -1px  1px 0 black,
+        1px  1px 0 black;
     }
+
+
+    .navbar {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: #333;
+      padding: 10px;
+      z-index: 999;
+    }
+    .navbar ul {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+    .navbar a {
+      color: white;
+      text-decoration: none;
+    }
+
 
     section {
       padding: 2rem;
@@ -36,8 +83,8 @@
 
     .image-row {
       display: flex;
-      justify-content: center; /* 가운데 정렬 */
-      gap: 1.5rem; /* 이미지 사이 간격 */
+      justify-content: center;
+      gap: 1.5rem; 
       margin-top: 1rem;
       margin-left: 300px;
       width: 100px;
